syntax = "proto3";

option csharp_namespace = "GrpcService.KingdomRpc";

package kingdom;

import "google/protobuf/timestamp.proto";

service KingdomRpc {
  rpc GetKingdom (KingdomRequest) returns (KingdomResponse);
  rpc GetAllKingdoms (KingdomRequest) returns (stream KingdomResponse);
  rpc GetKingdomTechologies (KingdomTechnologyRequest) returns (stream KingdomTechnologyResponse);
}

message KingdomRequest {
  int32 continentId = 1;
}

message KingdomResponse {
  string name = 1;
  string continent = 2;
}

message KingdomTechnologyRequest {
  int32 kingdom_technology = 1;
}

message KingdomTechnologyResponse {
  string name = 1;
  string technology_name = 2;
  string technology_description = 3;
  google.protobuf.Timestamp research_start_time = 4;
  string research_status = 5;
}
